[workspace]
members = ["nano-block-ebpf", "nano-block"]

resolver = "2"

[workspace.package]
authors = ["dhruvsol"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dhruvsol/NanoBlock"


[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1", default-features = false }
network-types = "0.1.0"
libc = { version = "0.2.159", default-features = false }
tokio = { version = "1.0", features = ["full"] }
thiserror = { version = "1.0", default-features = false }