[package]
name = "firewall-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
firewall-common = { path = "../firewall-common" }
nano-block = { path = "../../.." }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "firewall"
path = "src/main.rs"
